// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render menu 1`] = `
<React.Fragment>
  <SearchBox
    className="big-spacer-top spacer-bottom"
    minLength={2}
    onChange={[Function]}
    placeholder="Search for pages or keywords"
    value=""
  />
  <div
    className="documentation-results panel"
  >
    <div
      className="list-group"
    >
      <Menu
        navigation={
          Array [
            Object {
              "children": Array [
                "/lorem/index",
              ],
              "title": "Block",
            },
            "foobar",
          ]
        }
        pages={
          Array [
            Object {
              "content": "",
              "relativeName": "lorem/index",
              "text": "",
              "title": "Lorem Ipsum",
              "url": "/lorem/index",
            },
            Object {
              "content": "",
              "relativeName": "foobar",
              "text": "",
              "title": "Where does Foobar come from?",
              "url": "/foobar",
            },
          ]
        }
        splat="foobar"
      />
    </div>
  </div>
</React.Fragment>
`;

exports[`should search 1`] = `
<React.Fragment>
  <SearchBox
    className="big-spacer-top spacer-bottom"
    minLength={2}
    onChange={[Function]}
    placeholder="Search for pages or keywords"
    value="foo"
  />
  <div
    className="documentation-results panel"
  >
    <div
      className="list-group"
    >
      <SearchResults
        navigation={
          Array [
            Object {
              "children": Array [
                "/lorem/index",
              ],
              "title": "Block",
            },
            "foobar",
          ]
        }
        pages={
          Array [
            Object {
              "content": "",
              "relativeName": "lorem/index",
              "text": "",
              "title": "Lorem Ipsum",
              "url": "/lorem/index",
            },
            Object {
              "content": "",
              "relativeName": "foobar",
              "text": "",
              "title": "Where does Foobar come from?",
              "url": "/foobar",
            },
          ]
        }
        query="foo"
        splat="foobar"
      />
    </div>
  </div>
</React.Fragment>
`;
